@@ -11,7 +11,33 @@ ENV LANG='en_US.UTF-8' \
     SKYWALKING_HOME=/skywalking \
     SKYWALKING_AGENT=/skywalking/agent/skywalking-agent.jar \
     SW_AGENT_NAME=YourAppName \
-    JAVA_TOOL_OPTIONS="-Xms256m -Xmx1g -Xss256k -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=512m -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:MaxTenuringThreshold=15 -XX:+ExplicitGCInvokesConcurrent -XX:+CMSParallelRemarkEnabled -XX:SurvivorRatio=8"
+    JAVA_TOOL_OPTIONS=" \
+      -Xms256m \
+      -Xmx1g \
+      -Xss256k \
+      -XX:MetaspaceSize=128m \
+      -XX:MaxMetaspaceSize=512m \
+      -Xnoclassgc \
+      -XX:+UseConcMarkSweepGC \
+      -XX:+UseParNewGC \
+      -XX:ParallelGCThreads=12 \
+      -XX:MaxTenuringThreshold=15 \
+      -XX:+ExplicitGCInvokesConcurrent \
+      -XX:+CMSParallelRemarkEnabled \
+      -XX:SurvivorRatio=8 \
+      -XX:CMSInitiatingOccupancyFraction=65 \
+      -XX:+UseCMSInitiatingOccupancyOnly \
+      -XX:+UseCMSCompactAtFullCollection \
+      -XX:+CMSClassUnloadingEnabled \
+      -XX:+PrintGCDetails \
+      -XX:+UseGCLogFileRotation \
+      -XX:NumberOfGCLogFiles=10 \
+      -XX:GCLogFileSize=1024k \
+      -XX:+PrintGCDateStamps \
+      -XX:+PrintGCTimeStamps \
+      -Xloggc:logs/gc-$(date +%s).vgc"
+
+COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
 
 RUN set -x && \
     sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories && \
@@ -22,9 +48,8 @@ RUN set -x && \
     wget -t 0 -c -T 36000 https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.29-r0/glibc-2.29-r0.apk && \
     apk add glibc-2.29-r0.apk && \
     rm -rf /var/cache/apk/* && \
-    rm /etc/apk/keys/sgerrand.rsa.pub
-
-COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+    rm /etc/apk/keys/sgerrand.rsa.pub && \
+    rm glibc-2.29-r0.apk
 
 RUN chmod +x /usr/local/bin/docker-entrypoint.sh \
   && ln -s /usr/local/bin/docker-entrypoint.sh \
